@@ -2003,7 +2003,7 @@
         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
         <property name="spacing">2</property>
         <child>
-          <widget class="GtkScrolledWindow" id="scrolledwindow7">
+          <widget class="GtkScrolledWindow" id="options_scroll">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="border_width">5</property>
