@@ -1,3 +1,10 @@
+2008-10-26  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keyboard-properties-xkbot.c: (option_focused_cb),
+	(xkb_options_add_option), (xkb_options_add_group):
+	* gnome-keyboard-properties.glade: scroll the options window when the
+	keyboard focus moves out of the visible part (bug #557944)
+
 Fri Oct 24 19:38:52 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* gnome-keyboard-properties.c: Don't include gnome.h
